- fix alignments on homepage titles and icons

--- a/css/dashboards.css
+++ b/css/dashboards.css
@@ -488,7 +488,8 @@ a.handle:hover {
 .home-content h2 {
   color: #cfe7fb;
   font-weight: bold;
-  margin-top: 0;
+  margin-top: 10px;
+  text-align: center;
 }
 .home-content h3 {
   font-size: 15px;
@@ -508,6 +509,7 @@ a.handle:hover {
   margin-right: 5px;
 }
 .image-icon {
+  margin-top: -7px;
   width: 20px;
 }
 .btn-link {
